Rework publish scripts [non-fork pr] (#113)